1：生命周期 2：activity跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".launchmode.DialogActivity"
+                  android:theme="@style/Theme.AppCompat.Dialog"
+        >
+        </activity>
+        <activity android:name=".launchmode.SecondActivity">
+        </activity>
+        <activity android:name=".launchmode.FirstActivity">
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
