--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.zh.kotlin">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
@@ -9,11 +8,13 @@
 
     <application
             android:allowBackup="true"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
             android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".recycler.RecyclerActivity">
+        </activity>
         <activity
                 android:name=".login.LoginActivity"
                 android:label="@string/title_activity_login">
