--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".recycler.chat.ChatActivity">
+        </activity>
         <activity android:name=".recycler.RecyclerActivity">
         </activity>
         <activity
