--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.zh.kotlin"
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.TestKt.kt.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,13 +21,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.+'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0'
+    testImplementation 'junit:junit:4.13'
+    implementation("io.coil-kt:coil:0.11.0")
+    implementation("io.coil-kt:coil-base:0.11.0")
+    implementation("io.coil-kt:coil-gif:0.11.0")
+    implementation("io.coil-kt:coil-svg:0.11.0")
+
 }
