--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.zh.kotlin">
+        xmlns:tools="http://schemas.android.com/tools"
+        package="com.zh.kotlin">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:allowBackup="true"
@@ -13,27 +15,23 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".recycler.chat.ChatActivity">
-        </activity>
-        <activity android:name=".recycler.RecyclerActivity">
-        </activity>
+        <activity android:name=".imageload.ImageActivity"></activity>
+        <activity android:name=".fragment.FragmentActivity"></activity>
+        <activity android:name=".recycler.chat.ChatActivity"></activity>
+        <activity android:name=".recycler.RecyclerActivity"></activity>
         <activity
                 android:name=".login.LoginActivity"
-                android:label="@string/title_activity_login">
-        </activity>
+                android:label="@string/title_activity_login"></activity>
         <activity
                 android:name=".launchmode.DialogActivity"
-                android:theme="@style/Theme.AppCompat.Dialog">
-        </activity>
-        <activity android:name=".launchmode.SecondActivity">
-        </activity>
-        <activity android:name=".launchmode.FirstActivity">
-        </activity>
+                android:theme="@style/Theme.AppCompat.Dialog"></activity>
+        <activity android:name=".launchmode.SecondActivity"></activity>
+        <activity android:name=".launchmode.FirstActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
