--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     implementation("io.coil-kt:coil-base:0.11.0")
     implementation("io.coil-kt:coil-gif:0.11.0")
     implementation("io.coil-kt:coil-svg:0.11.0")
-
+    implementation("io.coil-kt:coil-video:0.11.0")
 }
