--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.13'
     implementation("io.coil-kt:coil:0.11.0")
     implementation("io.coil-kt:coil-base:0.11.0")
     implementation("io.coil-kt:coil-gif:0.11.0")
     implementation("io.coil-kt:coil-svg:0.11.0")
     implementation("io.coil-kt:coil-video:0.11.0")
+    implementation project(path: ':baselib')
 }
