--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,16 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".test.TestActivity">
-
-        </activity>
+        <activity android:name=".register.RegisterActivity"></activity>
+        <activity android:name=".test.TestActivity"></activity>
         <activity android:name=".imgsel.ImgSelActivity" />
         <activity android:name=".imageload.ImageActivity" />
-        <activity android:name=".fragment.FragmentActivity">
-
-        </activity>
+        <activity android:name=".fragment.HomeActivity"></activity>
         <activity android:name=".recycler.chat.ChatActivity" />
         <activity android:name=".recycler.RecyclerActivity">
+
+        </activity>
+        <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,16 +36,11 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".login.LoginActivity"
-                android:label="@string/title_activity_login" />
-        <activity
                 android:name=".launchmode.DialogActivity"
                 android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".launchmode.SecondActivity" />
         <activity android:name=".launchmode.FirstActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
 
         <provider
                 android:name="androidx.core.content.FileProvider"
