--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
     implementation("io.coil-kt:coil:0.11.0")
     implementation("io.coil-kt:coil-base:0.11.0")
