--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     api 'androidx.core:core-ktx:1.3.0'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     api 'com.google.android.material:material:1.1.0'
+    api 'cn.rongcloud.sdk:im_lib:2.10.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
