--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://dl.bintray.com/rongcloud/maven" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
@@ -20,7 +21,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        
+        maven { url "https://dl.bintray.com/rongcloud/maven" }
     }
 }
 
